# GRB-Jet-Energy-Model

./: GRB-JET-ENERGY-MODEL.py  JET_ENERGY_FUNCTIONS.cp313-win_amd64.pyd  README.md  comparisons.py  energy_per_solid_angle_out.py  jet_energy_functions.py  jet_energy_out.py  lib-src.py  pyproject.toml
config/: CalculatedParameters.yaml  Parameters.yaml  parameters.py
docs/: Basic Usage.ipynb  Basic Usage.md  Other Usages.md
examples/GRB-Paper-Configurations/: comparisons.py  energy_per_solid_angle_out.py  example2.py  jet_energy_functions.py  jet_energy_out.py
examples/GRB-Paper-Configurations/config/GRB1-Configurations/: CalculatedParameters-GRB1.yaml  Parameters-GRB1.yaml  parameters.py
examples/GRB-Paper-Configurations/config/GRB2-Configurations/: CalculatedParameters-GRB2.yaml  Parameters-GRB2.yaml  parameters.py
examples/GRB-Paper-Configurations/config/GRB3-Configurations/: CalculatedParameters-GRB3.yaml  Parameters-GRB3.yaml  parameters.py
examples/GRB-Paper-Configurations/src/: CMakeLists.txt  example1.cpp  setup.py
src/: CMakeLists.txt  JET_ENERGY_FUNCTIONS.cp313-win_amd64.pyd  comparisons.py  energy_per_solid_angle_out.py  jet_energy_out.py  main.cpp  setup.py  test2.py  testcurve.py
src/functions/: CMakeLists.txt  ComputationalFunctions.cpp  setup.py
test files/: GRB200806.lc  functionTest.py  lctest.py
